# sani-media-viewer

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: build.yml  learn-github-actions.yml
src/: App.vue  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: main.css
src/components/: Favourites.vue  Files.vue  Folders.vue  MediaItem.vue  Options.vue
src/types/: index.ts
