[package]
name = "sani-media-viewer"
version = "0.5.1"
description = "A web-based media viewer"
authors = ["Sani"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-write-file", "fs-read-file", "fs-create-dir", "path-all", "protocol-asset", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
home = "0.5.9"
log = "0.4.20"
sha2 = "0.10.8"
dunce = "1.0.4"
dotenv = "0.15.0"
env_logger = "0.11.2"
num_cpus = "1.16.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
